<resources>
    <string name="app_name">Pet Tracker App</string>
    <string name="title_activity_maps">Map</string>
    <string name="Pets">Pets</string>
    <string name="Map_Guide">Map Guide</string>
    <string name="help">Help</string>
    <string name="exit">Exit</string>
    <string name="back">Back</string>
    <string name="settings">Settings</string>
    <string name="helpString">Help for the App. To use the app, create a new pet, and with the new pet created, now you can access the information along with a map guide and a food timer.</string>
    <string name="refresh">Refresh</string>
    <string name="pet_info">Enter Your Pet\'s Information</string>
    <string name="name_input">Name</string>
    <string name="type_input">Type</string>
    <string name="age_input">Age</string>
    <string name="sex_input">Sex</string>
    <string name="weight_input">Weight</string>
    <string name="submit_button">Submit</string>
    <string name="info_button">Enter Info</string>
    <string name="alarm">Set Alarm</string>
    <string name="alarm2">Alarm</string>
    <string name="alarm3">Please Set Alarm</string>
    <string name="cancel">Cancel</string>
    <string name="language">Language</string>
</resources>